# root-dict-cmake

./: .gitignore  CMakeLists.txt  README.md
include/: Point.hpp
prog/: CMakeLists.txt  read.cpp  write.cpp
src/: CMakeLists.txt  classes.h  classes_def.xml
